--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "security"
   ],
   "homepage": "https://github.com/strongloop/loopback-component-passport",
-  "version": "3.12.0",
+  "version": "3.12.1",
   "maintainers": [
     {
       "name": "Raymond Feng",
@@ -27,6 +27,7 @@
     "url": "git://github.com/strongloop/loopback-component-passport.git"
   },
   "dependencies": {
+    "jwt-decode": "^3.1.2",
     "passport": "^0.4.0",
     "strong-globalize": "^4.1.1",
     "underscore": "^1.9.1",
